--- a/Hotel_System/Properties/Resources.resx
+++ b/Hotel_System/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="kisspng-computer-icons-user-icon-design-numerous-5ad8d538030372.9762584815241598000124" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\kisspng-computer-icons-user-icon-design-numerous-5ad8d538030372.9762584815241598000124.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hotel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\hotel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
